--- a/index.html
+++ b/index.html
@@ -3138,7 +3138,7 @@ for Learning Partial Differential Equations</em>, Neurocomputing, Vol. 185, pp.
 <p class="MsoNormal20" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">61. <u>Zhouchen 
 Lin</u> and Yameng Huang, <em>Fast Multidimensional Ellipsoid-Specific Fitting 
 by Alternating Direction Method of Multipliers</em>, IEEE Trans. Pattern 
-Analysis and Machine Intelligence, Vol. 38, No. 5, pp. 1021-1026, 2016. [<a href="https://zhouchenlin.github.io/Publications/2016-TPAMI-Ellipsoid.pdf">pdf</a>] 
+Analysis and Machine Intelligence, Vol. 38, No. 5, pp. 1021-1026, 2016. [<a href="https://zhouchenlin.github.io/Publications/2016-TPAMI-Ellipsoid.pdf">pdf</a>][<a href="Ellipspoid_Fitting.m">code</a>] 
 </span></p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;">&nbsp;</p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">60. 
