--- a/index.html
+++ b/index.html
@@ -2622,7 +2622,7 @@ to use  mathematics to solve real problems elegantly. Reference books: </span></
     <td height="73">
       <p class="WordSection1">4. My  book, <a href="https://item.jd.com/13357588.html">Accelerated Optimization for Machine Learning: First-Order Algorithms</a> (Chinese version, with errors in English version corrected), has been published! </p></td>
     <td width="168" rowspan="3"><img src="index_files/ADMM.png" width="180" height="247"></td>
-    <td width="166" rowspan="3"><img src="../Publications/ADMM_Book/Chinese Version/封面.png" width="181" height="244"></td>
+    <td width="166" rowspan="3"><img src="index_files/ADMM-Chinese_Cover.png" width="181" height="248" longdesc="index_files/ADMM-Chinese_Cover.png"></td>
     <td width="166" rowspan="3"><p align="center">&nbsp;</p>      </td>
   </tr>
   <tr align="left">
