--- a/index.html
+++ b/index.html
@@ -3402,8 +3402,9 @@ Vol. 42, No. 11, pp. 2492-2501, 2009. [<a href="https://zhouchenlin.github.io/Pu
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. <u>Zhouchen Lin</u>*, Junfeng 
 He, Xiaoou Tang, and Chi-Keung Tang, <i style="mso-bidi-font-style: normal;">Limits of Learning-Based Superresolution 
-Algorithms</i>, International Journal of Computer Vision, Vol. 80, No. 3, pp. 
-406-420, 2008. [<a href="https://zhouchenlin.github.io/Publications/2008-IJCV-Learning_Based_SR.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+Algorithms</i>, International J. Computer Vision, Vol. 80, No. 3, pp. 
+406-420, 2008. [<a href="https://zhouchenlin.github.io/Publications/2008-IJCV-Learning_Based_SR.pdf"><span class="GramE">pdf</span></a>]
+<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. Liang Wan*, Wei Feng, 
 <u>Zhouchen Lin</u>, Tien-Tsin Wong, and Zhi-Qiang Liu, <i style="mso-bidi-font-style: normal;">Perceptual
@@ -3947,25 +3948,23 @@ Processing Systems 2007. [<a href="https://zhouchenlin.github.io/Publications/20
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Deli Zhao, <u>Zhouchen Lin</u>, 
 and Xiaoou Tang,&nbsp;<i style="mso-bidi-font-style: normal;">Laplacian PCA and 
-Its Applications</i>, Int’l Conf. Computer Vision’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-LPCA.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+Its Applications</i>, ICCV’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-LPCA.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. Deli Zhao, <u>Zhouchen Lin</u>, 
 and&nbsp;Xiaoou Tang,&nbsp;<i style="mso-bidi-font-style: normal;">Contextual
- Distance for Data Perception</i>, Int’l Conf. Computer Vision’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Contextual_Distance.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+ Distance for Data Perception</i>, ICCV’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Contextual_Distance.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. Guangcan Liu, <u>Zhouchen
  Lin</u>, Xiaoou Tang, and Yong Yu, <i style="mso-bidi-font-style: normal;">A
- Hybrid Graph Model for Unsupervised Object Segmentation</i>, Int’l Conf.
- Computer Vision’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-HGM.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+ Hybrid Graph Model for Unsupervised Object Segmentation</i>, ICCV’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-HGM.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. Moshe Ben-Ezra, <u>Zhouchen
  Lin</u>, and Bennett Wilburn, <i style="mso-bidi-font-style: normal;">Penrose
- Pixels: Super-Resolution in the Detector Layout Domain</i>, Int’l Conf.
- Computer Vision’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Penrose_Pixels.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+ Pixels: Super-Resolution in the Detector Layout Domain</i>, ICCV’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Penrose_Pixels.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. <u>Zhouchen Lin</u>, Junfeng 
 He, Xiaoou Tang, and Chi-Keung Tang, <i style="mso-bidi-font-style: normal;">Limits of Learning-Based Superresolution 
-Algorithms</i>, Int’l Conf. Computer Vision’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Learning_Based_SR.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
+Algorithms</i>, ICCV’07. [<a href="https://zhouchenlin.github.io/Publications/2007-ICCV-Learning_Based_SR.pdf"><span class="GramE">pdf</span></a>]<o:p></o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p style="margin: 0cm 0cm 0pt; -ms-layout-grid-mode: char;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. Deli Zhao, <u>Zhouchen Lin</u>, 
 Rong Xiao, and Xiaoou Tang, <i style="mso-bidi-font-style: normal;">Linear
@@ -4426,20 +4425,17 @@ Committee</strong>), ICML 2016, CVPR 2016 (<strong>Area Chair</strong>), NIPS
 Chair</strong>), ICML 2015, CVPR 2015, AAAI 2015, NIPS 2014, ECCV 2014, ICML 
 2014, CVPR 2014 (<strong>Area Chair</strong>), Siggraph Asia 2013, ICCV 2013, 
 IJCAI 2013, ACCV 2012, Siggraph 2012, IEEE Computer Vision and Pattern 
-Recognition 2012, Asian Conf. Machine Learning 2011, NIPS 2011, Int’l Conf. 
-Computer Vision 2011, Eurographics 2011, IEEE Computer Vision and Pattern 
+Recognition 2012, Asian Conf. Machine Learning 2011, NIPS 2011, ICCV 2011, Eurographics 2011, IEEE Computer Vision and Pattern 
 Recognition 2011, Asian Conf. Machine Learning 2010, IEEE Computer Vision and 
 Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-font-weight: normal;">Area
- Chair</b>), Int’l Conf. Computer Vision 2009,<span style="mso-spacerun: yes;">&nbsp; </span>IEEE Computer Vision and Pattern
+ Chair</b>), ICCV 2009,<span style="mso-spacerun: yes;">&nbsp; </span>IEEE Computer Vision and Pattern
  Recognition 2009, Asian Conf. Machine Learning 2009, European Conf. Computer
- Vision 2008, IEEE Computer Vision and Pattern Recognition 2008, Int’l Conf.
- Computer Vision 2007, IEEE Computer Vision and Pattern Recognition 2007, Asian
+ Vision 2008, IEEE Computer Vision and Pattern Recognition 2008, ICCV 2007, IEEE Computer Vision and Pattern Recognition 2007, Asian
  Conf. Computer Vision 2007, Pacific Graphics 2006, Geometric Modeling and
  Processing 2006, IEEE Computer Vision and Pattern Recognition 2005, Visual
  Communications and Image Processing 2005, IEEE Computer Vision and Pattern
  Recognition 2004, Eurographics 2002, Asian Conf. Computer Vision 2002, Int’l
- Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, Int’l
- Conf. Computer Vision 2001, Pacific Graphics 2001 
+ Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">30. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>   
