--- a/index.html
+++ b/index.html
@@ -2607,7 +2607,7 @@ to use  mathematics to solve real problems elegantly. Reference books: </span></
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
-      <p class="WordSection1">1. I am invited to be a Fellow of Asia-Pacific Artificial Intelligence Association (AAIA)! Two papers accepted to COLT 2023! One paper accepted to JMLR! </p></td>
+      <p class="WordSection1">1. I am invited to be a senior area chair of ICLR 2024! I am invited to be a Fellow of Asia-Pacific Artificial Intelligence Association (AAIA)! Two papers accepted to COLT 2023! One paper accepted to JMLR! </p></td>
     <td width="168" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="166" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -2831,9 +2831,9 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">154. Yibo Yang, Haobo Yuan, XiangtaiLi, JianlongWu, Lefei Zhang, Zhouchen Lin, Philip Torr, Dacheng Tao, and Bernard Ghanem, <em>Neural Collapse Terminus: A Unified Solution for Class Incremental Learning and Its Variants</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">154. Pan Zhou, Xingyu Xie, Zhouchen Lin, Kim-Chuan Toh, and Shuicheng Yan, Win: Weight-Decay-Integrated Nesterov Acceleration for  Faster Network Training, submitted to J. Machine Learning Research.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">153. XXX, XXX, and <u>Zhouchen Lin</u>, <em>Continual Learning of Spiking Neural Networks with Hebbian Learning based Orthogonal Projection</em>, submitted to Nature Communication.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">153. Yibo Yang, Haobo Yuan, XiangtaiLi, JianlongWu, Lefei Zhang, Zhouchen Lin, Philip Torr, Dacheng Tao, and Bernard Ghanem, <em>Neural Collapse Terminus: A Unified Solution for Class Incremental Learning and Its Variants</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">152. Shen Yan, Qingyan Meng, Mingqing Xiao, Yisen Wang, and <u>Zhouchen Lin</u>, <em>Sampling Complex Topology Structures for Spiking Neural Networks</em>, submitted to Neural Networks, major revision.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3502,7 +3502,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. M paper submitted to XXX 2023.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">159. M paper submitted to ICLR 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. M paper submitted to AAAI 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">57. N papers submitted to NeurIPS 2023.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4402,7 +4404,7 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">29. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">AAAI 2024 (<strong>Senior Program 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">ICLR 2024 (<strong>Senior Area Chair</strong>), AAAI 2024 (<strong>Senior Program 
 Committee</strong>), 第十九届中国图象图形学学会青年科学家会议（General Co-Chair），NeurIPS 
 2023 (<strong>Senior Area Chair</strong>), ECAI 2023 (<strong>Area Chair</strong>), ICCV 2023 (<strong>Area Chair</strong>), ICLR 2023 (<strong>Area Chair</strong>), AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NeurIPS 
 2022 (<strong>Senior Area Chair</strong>), ICML 2022 (<strong>Senior Area Chair</strong>), ICLR 2022 (<strong>Highlighted Area Chair</strong>), ICPR 2022  
@@ -4822,7 +4824,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Aug. 20, 2023. Number of visitors since March 1, 2010:     
+was last updated on Aug. 21, 2023. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
