--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
-      <p class="WordSection1">1. I am invited to be a senior area chair of ICLR 2024! I am invited to be a Fellow of Asia-Pacific Artificial Intelligence Association (AAIA)! Two papers accepted to COLT 2023! One paper accepted to JMLR! </p></td>
+      <p class="WordSection1">1. I am invited to be a senior area chair of ICML 2024! I am invited to be a Fellow of Asia-Pacific Artificial Intelligence Association (AAIA)! Two papers accepted to COLT 2023! One paper accepted to JMLR! </p></td>
     <td width="168" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="166" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -2830,11 +2830,16 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">160. Zhengyang Shen, Yeqing Qiu, Jialun Liu, Lingshen He, and <u>Zhouchen Lin</u>, <em>Efficient Learning of Scale-Adaptive Nearly Affine Invariant Networks</em>, submitted to Neural Networks.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">162. Jianlong Wu, Zihan Li, Wei Sun, Jianhua Yin, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>ClusMatch: Improving Deep Clustering by
+  Unified Positive and Negative Pseudo-label Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">159. Hanze Dong, Shihong Ding, Cong Fang, <u>Zhouchen Lin</u>, and Tong Zhang, <em>PAPAL: A Provable PArticle-based Primal-Dual ALgorithm for Mixed Nash Equilibrium</em>, submitted to JMLR.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">161. Xin Xu and <u>Zhouchen Lin</u>, <em>Learning Nonseparable Sparse Regularizers via Multivariate Activation Functions</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. Mingqing Xiao, Yixin Zhu, Di He, and <u>Zhouchen Lin</u>, <em>Synaptic Delay in Spiking Neural Networks Elevates Performance for Efficient Graph Reasoning</em>, submitted to Nature Machine Intelligence. </span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">160. Zhengyang Shen, Yeqing Qiu, Jialun Liu, Lingshen He, and <u>Zhouchen Lin</u>, <em>Efficient Learning of Scale-Adaptive Nearly Affine Invariant Networks</em>, submitted to Neural Networks, najor revision.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">159. Hanze Dong, Shihong Ding, Cong Fang, <u>Zhouchen Lin</u>, and Tong Zhang, <em>PAPAL: A Provable PArticle-based Primal-Dual ALgorithm for Mixed Nash Equilibrium</em>, submitted to J. Machine Learning Research.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. Mingqing Xiao, Yixin Zhu, Di He, and <u>Zhouchen Lin</u>, <em>Synaptic Delay in Spiking Neural Networks Elevates Performance for Efficient Graph Reasoning</em>, submitted to Nature Communication. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">157. Yibo Yang, Tongliang Liu, <u>Zhouchen Lin</u>, Bernard Ghanem, and Dacheng Tao, <em>ShadowNet for Data-Centric Quantum System Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3512,7 +3517,7 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">165. 1 paper submitted to CVPR 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">165. 2 papers submitted to CVPR 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">164. 1 paper submitted to AISTATS 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4341,7 +4346,7 @@ granted)</span></p>
 <p>29. *(202110841105X) 基于幻影梯度的图像分类隐式模型加速训练方法</p>
 <p>30. (202110550895.6) 基于优化诱导的平衡神经网络的图像分类方法</p>
 <p>31. (2021108958875) 基于规范等变转换算子神经网络的三维物体形状分类方法</p>
-<p>32. (2021109109762) 一种基于动态滤波等变卷积网络模型的图像分类方法</p>
+<p>32. *(2021109109762) 一种基于动态滤波等变卷积网络模型的图像分类方法</p>
 <p>33. (202210694741.9) 随时间在线训练脉冲神经网络模型的图像数据分类方法</p>
 <p>34. (202210814527.2) 基于深度学习优化器的大规模图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
@@ -4426,7 +4431,7 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">29. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">PRCV 2024 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
 (<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), AAAI 2024 (<strong>Senior Program 
 Committee</strong>), 第十九届中国图象图形学学会青年科学家会议（General Co-Chair），NeurIPS 
 2023 (<strong>Senior Area Chair</strong>), ECAI 2023 (<strong>Area Chair</strong>), ICCV 2023 (<strong>Area Chair</strong>), ICLR 2023 (<strong>Area Chair</strong>), AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NeurIPS 
@@ -4472,19 +4477,22 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Senior Member, CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
-<p>1. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
-<p>2. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
-<p>3. First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.</p>
-<p>4. Distinguished Speaker of CCF (2020). </p>
-<p>5. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+<p>1. Peking University ICBC Excellent Teacher Award (2023). </p>
+<p>2. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。</p>
+<p>3. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。</p>
+<p>4. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
+<p>5. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
+<p>6. Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.</p>
+<p>7. Distinguished Speaker of CCF (2020). </p>
+<p>8. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
-<p>6. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>7.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
-<p>8. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>9. Okawa Research Grant (2016) </p>
-<p>10. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>9. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>10.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
+<p>11. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>12. Okawa Research Grant (2016) </p>
+<p>13. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>11. Microsoft SPOT Award (2007)  </p>
+<p>14. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Courses:</span></u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
@@ -4548,6 +4556,8 @@ Eleventh Conference on Application of Image and Graphics Technology</a></span>
 <p>At: <a href="https://wsl-workshop.github.io/acml21.html">ACML 2021 Workshop on Weakly Supervised Learning</a> (Nov. 17, 2021) </p>
 <p>6. Equivariant Deep Networks</p>
 <p>At: <a href="http://icig2021.csig.org.cn/">International Conference on Image and Graphics 2021</a> (Dec. 26, 2021) </p>
+<p>7. Adan: Adaptive Nesterov Momentum Algorithm for Faster Optimizing Deep Models (Nov. 26, 2023)</p>
+<p>At: <a href="https://wlkjaqxy.nwpu.edu.cn/info/1044/6360.htm">The 18th China Annual Conference on Foundations of Artificial Intelligence, CFAI 2023</a>  </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Tutorials 
 &amp; Workshops:
 <o:p></o:p>
@@ -4847,7 +4857,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Nov. 23, 2023. Number of visitors since March 1, 2010:     
+was last updated on Dec. 6, 2023. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
