--- a/index.html
+++ b/index.html
@@ -4476,7 +4476,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">30. 
-Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Senior Member, CCF/CAA/CAAI Distinguished Member
+Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Senior Member, AAAI Senior Member, CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
 <p>1. Peking University ICBC Excellent Teacher Award (2023). </p>
@@ -4535,8 +4535,8 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>21. Zhengyang Shen, Ph.D. in 2022. </p>
 <p>22. Feng Jiang, Qiuhao Wang, Zhiheng Kong, and Nan Ke, Master in 2022. </p>
 <p>23. Zenan Ling (now Assistant Professor at Huazhong University of Science and Technology), PostDoc in 2022. </p>
-<p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>) and Mingjie Li (<strong>Peking University Excellent Graduate Student</strong>), Ph.D. in 2023. </p>
-<p>25. Dapeng Xu, Shihong Ding, Zhuping Gong, and Zongpeng Zhang, Master in 2023. </p>
+<p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>),  Mingjie Li (<strong>Peking University Excellent Graduate Student</strong>), Yifei Wang (co-supervise) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
+<p>25. Dapeng Xu, Shihong Ding, Zhuping Gong, and Zongpeng Zhang (co-supervise), Master in 2023. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote/Plenary 
   Speeches:
         <o:p></o:p></span></u></b></p>
@@ -4859,7 +4859,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Dec. 24, 2023. Number of visitors since March 1, 2010:     
+was last updated on Dec. 31, 2023. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
