--- a/index.html
+++ b/index.html
@@ -2572,10 +2572,11 @@ recruiting  Ph.D.s who <b style="mso-bidi-font-weight: normal;"><u>have
 strong mathematical abilities</u></b> (however, this does not imply that you  
 have to come from mathematics department) and <u><strong>great interest in 
 theoretical analysis</strong></u> in order to enjoy with me how 
-to use  mathematics to solve real problems elegantly. Reference books (downloadable from https://zh.z-library.se/): </span></p>
+to use  mathematics to solve real problems elegantly. Reference books: </span></p>
 <p>1. Amir Beck, First-order Methods in Optimization, SIAM, 2017.<br>
   2. Ulisses Braga-Neto, Fundamentals of Pattern 
   Recognition and Machine Learning, Springer, 2020. </p>
+<p>3. Francis Bach, <a href="https://www.di.ens.fr/%7Efbach/ltfp_book.pdf">Learning Theory from First Principles</a>, 2023. </p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
   <o:p></o:p>
 </span></p>
@@ -2606,7 +2607,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
-      <p class="WordSection1">1. One paper accepted to JMLR! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of NeurIPS 2024 and ICML 2024! </p></td>
+      <p class="WordSection1">1. Two papers accepted to ICML 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of NeurIPS 2024 and ICML 2024! </p></td>
     <td width="168" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="166" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -3531,11 +3532,15 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. N papers submitted to ICML 2024, IJCAI 2024, and COLT 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. N papers submitted to IJCAI 2024, and COLT 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. 1 paper submitted to COLM 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">168. 1 paper submitted to COLM 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">165. 1 papers submitted to UAI 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 papers submitted to UAI 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">165. Mingqing Xiao, Yixin Zhu, Di He, and <u>Zhouchen Lin*</u>, <em>Temporal Spiking Neural Networks with Synaptic Delay for Graph Reasoning</em>, ICML 2024. [<a href="Publications/2024-ICML-SNN-Reasoning.pdf">pdf</a>][<a href="Publications/2024-ICML-SNN-Reasoning_supp.zip">supplementary material</a>].</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">164. Yikang Li, Yeqing Qiu, Yuxuan Chen, Lingshen He, and <u>Zhouchen Lin*</u>, <em>Affine Equivariant Networks Based on Differential Invariants</em>, CVPR 2024. [<a href="Publications/2024-CVPR-AffineEq.pdf">pdf</a>][<a href="Publications/2024-CVPR-AffineEq_Supp.pdf">supplementary material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4882,7 +4887,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Apr. 11, 2024. Number of visitors since March 1, 2010:     
+was last updated on May 3, 2024. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
