--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 .STYLE4 {font-style: italic}
 .STYLE5 {font-family: "Verdana", "sans-serif"}
 .STYLE7 {font-style: italic; }
+.STYLE8 {
+	font-family: Verdana, sans-serif;
+	font-weight: bold;
+}
 </style></head><body lang="ZH-CN" topmargin="0" leftmargin="0" style="tab-interval: 21.0pt;" link="blue" vlink="purple">﻿
 <!-- saved from url=(0040)https://zhouchenlin.github.io/index.html -->
 <meta content="IE=5.0000" http-equiv="X-UA-Compatible">
@@ -2555,12 +2559,12 @@ to Zhouchen Lin's Homepage!</span></b></span><span lang="EN-US" style="font-fami
       <p align="center" style="text-align: center;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
       in 2000)<o:p></o:p></span></p></td>
     <td width="129" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;">
-      <p align="center" style="text-align: center;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
+      <p style="text-align: center;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
       in 2009)</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p></o:p></span></p></td>
-    <td width="132" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;"><span style="text-align: center;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
-      in 2013)</span></span></td>
-    <td width="132" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
-      in 2022)</span></td>
+    <td width="132" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;"><div align="center"><span style="text-align: center;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
+      in 2013)</span></span></div></td>
+    <td width="132" valign="top" style="padding: 0cm 5.4pt; width: 86.4pt;"><div align="center"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; font-size: 7.5pt;">(Taken 
+      in 2022)</span></div></td>
   </tr></tbody></table>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Dr. 
 <b>Zhouchen Lin</b> is a Professor with School 
@@ -2573,9 +2577,9 @@ strong mathematical abilities</u></b> (however, this does not imply that you
 have to come from mathematics department) and <u><strong>great interest in 
 theoretical analysis</strong></u> in order to enjoy with me how 
 to use  mathematics to solve real problems elegantly. Reference books: </span></p>
-<p>1. Amir Beck, First-order Methods in Optimization, SIAM, 2017.<br>
-  2. Ulisses Braga-Neto, Fundamentals of Pattern 
-  Recognition and Machine Learning, Springer, 2020. </p>
+<p>1. Amir Beck, First-order Methods in Optimization, SIAM, 2017.</p>
+<p>2. Ulisses Braga-Neto, Fundamentals of Pattern 
+  Recognition and Machine Learning, Springer, 2020.</p>
 <p>3. Francis Bach, <a href="https://www.di.ens.fr/%7Efbach/ltfp_book.pdf">Learning Theory from First Principles</a>, 2023. </p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
   <o:p></o:p>
@@ -2855,7 +2859,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">159. Yibo Yang, Tongliang Liu, <u>Zhouchen Lin</u>, Bernard Ghanem, and Dacheng Tao, <em>ShadowNet for Data-Centric Quantum System Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. Yibo Yang, Haobo Yuan, XiangtaiLi, JianlongWu, Lefei Zhang, <u>Zhouchen Lin</u>, Philip Torr, Dacheng Tao, and Bernard Ghanem, <em>Neural Collapse Terminus: A Unified Solution for Class Incremental Learning and Its Variants</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">158. Yibo Yang, Haobo Yuan, Xiangtai Li, JianlongWu, Lefei Zhang, <u>Zhouchen Lin</u>, Philip Torr, Dacheng Tao, and Bernard Ghanem, <em>Neural Collapse Terminus: A Unified Solution for Class Incremental Learning and Its Variants</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">157. Haotian Chen,  Jianyuan Guo, Chao Zhang, and <u>Zhouchen Lin</u>, <em>Human Structure Modeling for Video-Based Person Re-Identification without Body-Part Labels</em>, submitted to Pattern Recognition.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -2867,7 +2871,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">153</span>. <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Hanyuan Hang, Tao Huang, Yuchao Cai. Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Gradient Boosted Binary Histogram Ensemble for Large Scale Regression</em>, submitted to J. Machine Learning Research.</span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">152. Huan Li and <u>Zhouchen Lin</u>, <em>Accelerated Gradient Tracking  over Time-varying Graphs for Decentralized Optimization</em>, submitted to J. Machine Learning Research, minor revision. </span></span></p>
-<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">151. Hanyuan Hang, Yuchao Cai. Hanfang Yang, Biao Li, and <u>Zhouchen Lin</u>, <em>Optimal Class-Imbalanced Learning with Bagged Nearest Neighbor Classifiers</em>, submitted to J. Machine Learning Research.</span></span></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">151. Hanyuan Hang, Yuchao Cai, Hanfang Yang, Biao Li, and <u>Zhouchen Lin</u>, <em>Optimal Class-Imbalanced Learning with Bagged Nearest Neighbor Classifiers</em>, submitted to J. Machine Learning Research.</span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">150. Hanyuan Hang, Tao Huang, Biao Li, and <u>Zhouchen Lin</u>, <em>Histogram Transform Ensembles for Density-based Unsupervised Learning</em>, submitted to J. Machine Learning Research.</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">149. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, minor revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3532,11 +3536,11 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. N papers submitted to IJCAI 2024, and COLT 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. N papers submitted to NeurIPS 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">168. 1 paper submitted to COLM 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 papers submitted to UAI 2024.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 papers submitted to COLT 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4375,9 +4379,11 @@ granted)</span></p>
 <p>34. (202210814527.2) 基于深度学习优化器的大规模图像分类方法</p>
 <p>35. (2024100154465) 基于具有万有逼近性质的神经网络架构的图像分类方法</p>
 <p>36. (202410162884.4) 基于微分不变量的仿射等变网络模型的图像分类方法</p>
+<p class="STYLE8"><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Software Copyright:</span></u></b></p>
+<p>1. (2023SR1724520) 基于Adan优化器的深度模型训练软件 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
-Activities:   
-        <o:p></o:p>
+  Activities:   
+  <o:p></o:p>
 </span></u></b></p>
 <p>1. Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), grade 
 2023. </p>
