--- a/index.html
+++ b/index.html
@@ -3540,7 +3540,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">167. 1 paper submitted to COLM 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang*, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">165. Mingqing Xiao, Yixin Zhu, Di He, and <u>Zhouchen Lin*</u>, <em>Temporal Spiking Neural Networks with Synaptic Delay for Graph Reasoning</em>, ICML 2024. [<a href="Publications/2024-ICML-SNN-Reasoning.pdf">pdf</a>][<a href="Publications/2024-ICML-SNN-Reasoning_supp.zip">supplementary material</a>].</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4373,7 +4373,7 @@ granted)</span></p>
 <p>30. (202110550895.6) 基于优化诱导的平衡神经网络的图像分类方法</p>
 <p>31. (2021108958875) 基于规范等变转换算子神经网络的三维物体形状分类方法</p>
 <p>32. *(ZL2021109109762) 一种基于动态滤波等变卷积网络模型的图像分类方法</p>
-<p>33. (202210694741.9) 随时间在线训练脉冲神经网络模型的图像数据分类方法</p>
+<p>33. *(202210694741.9) 随时间在线训练脉冲神经网络模型的图像数据分类方法</p>
 <p>34. (202210814527.2) 基于深度学习优化器的大规模图像分类方法</p>
 <p>35. (2024100154465) 基于具有万有逼近性质的神经网络架构的图像分类方法</p>
 <p>36. (202410162884.4) 基于微分不变量的仿射等变网络模型的图像分类方法</p>
@@ -4569,7 +4569,11 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>23. Zenan Ling (now Assistant Professor at Huazhong University of Science and Technology), PostDoc in 2022. </p>
 <p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>, 2019年度石青云院士优秀论文奖),  Mingjie Li (<strong>Peking University Excellent Graduate Student</strong>), Yifei Wang (co-supervise, <strong>CAAI 2023 Outstanding Ph.D. Dissertation Award Honorable Mention</strong>) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
 <p>25. Dapeng Xu, Shihong Ding, Zhuping Gong, and Zongpeng Zhang (co-supervise), Master in 2023. </p>
-<p>26. Mingqing Xiao (2021年度石青云院士优秀论文奖), Ph.D. in 2025. </p>
+<p>26. Long Yang, Postdoc in 2024. </p>
+<p>27. Lingshen He, Ph.D. in 2024.</p>
+<p>28. Guyu Hou and Yi Wu, Master in 2024.  </p>
+<p>29. Mingqing Xiao (2021年度石青云院士优秀论文奖), Ph.D. in 2025. </p>
+<p>&nbsp;</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote/Plenary 
   Speeches:
         <o:p></o:p></span></u></b></p>
